<resources>
    <string name="app_name">Friends Chat</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_register">RegisterActivity</string>
    <string name="friend_s_chat">Friend\'s Chat</string>
    <string name="password">Password</string>
    <string name="title_activity_add_photo_profile">title_activity_add_photo_profile</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="save_photo">Save photo</string>
    <string name="username">username</string>
    <string name="write_message_here">Write message here</string>
    <string name="welcome_and_make_friend_s">Welcome and make friend\'s!</string>
    <string name="find_new_friend_s">Find new Friend\'s…</string>
    <string name="e_mail">E-mail</string>
    <string name="todo">Todo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="i_m_a_new_user">I\'m a new user.</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="sign_in">Sign In</string>
    <string name="i_m_already_a_member">I\'m already a member.</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="sign_out">sign_out</string>
    <string name="chatting">Chatting</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="testing_purposes">testing purposes</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>