<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_text_color"
    tools:context=".MessageChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FriendsChat.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_Message_Chat"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/customToolbarColorPrimary"
            app:popupTheme="@style/Theme.FriendsChat.AppBarOverlay">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_Profile_Image_MChat"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_user_account" />

            <TextView
                android:id="@+id/toolbar_textView_Username_MChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/user_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Chats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relative_layout_bottom"
        android:layout_below="@+id/appBarLayout"
        android:background="@drawable/ic_background_recyclerview" />

    <RelativeLayout
        android:id="@+id/relative_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:padding="6dp">

        <EditText
            android:id="@+id/textView_Text_Message"
            android:layout_width="270dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="6dp"
            android:layout_toStartOf="@+id/imageView_Attach_Image_File"
            android:background="@drawable/ic_background_edittext_secondary"
            android:hint="@string/write_message_here"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:textColorHint="@color/background"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView_Send_Message"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_send_message"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView_Attach_Image_File"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/imageView_Send_Message"
            android:background="@drawable/ic_baseline_attach_file_24"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

</RelativeLayout>